Use input instead of textarea for file name.

--- a/WireGuardCommand/Pages/Project/ProjectView.razor
+++ b/WireGuardCommand/Pages/Project/ProjectView.razor
@@ -198,7 +198,7 @@
                                          Content="The name of the output file." />
                             </div>
                             <div style="display: flex; gap: 0.5rem">
-                                <textarea style="flex: 1" rows="4" @bind="project.ProjectData.CommandFileName"></textarea>
+                                <input style="flex: 1" rows="4" @bind="project.ProjectData.CommandFileName"></input>
                             </div>
                         </div>
 
