--- a/WireGuardCommand/Components/Toolbar.razor.css
+++ b/WireGuardCommand/Components/Toolbar.razor.css
@@ -2,5 +2,6 @@
     display: flex;
     flex-direction: row;
 
-    background-color: #151515;
+    background-color: rgb(40, 40, 40);
+    border-bottom: 1px solid rgb(64, 64, 64);
 }
