--- a/WireGuardCommand/Components/ToolbarMenuItem.razor.css
+++ b/WireGuardCommand/Components/ToolbarMenuItem.razor.css
@@ -1,5 +1,10 @@
 ﻿.toolbar-menu-item {
+    font-size: 0.75rem;
+
     padding: 0.5rem;
+    margin: 0 5px;
+
+    border-radius: 2px;
 
     transition: background-color 0.25s;
 }
