Cleaned up dialog component to be easier to use.

--- a/WireGuardCommand/Components/CodeHighlighter.razor
+++ b/WireGuardCommand/Components/CodeHighlighter.razor
@@ -1,5 +1,5 @@
 ﻿<div class="code">
-    <Dialog Title="QR Code" Content="@qrCode" Type="DialogType.Ok" @ref="QRCodeDialog"/>
+    <Dialog @ref="QRCodeDialog"/>
 
     <pre>
         <code class="@Language">
@@ -10,7 +10,7 @@
         <div class="save" @onclick="SaveConfigAsync">
             <img src="/images/save.png" width="20" height="20" />
         </div>
-        <div class="qrcode" @onclick="() => QRCodeDialog.Show()">
+        <div class="qrcode" @onclick="ShowQRCode">
             <img src="/images/qrcode.png" width="20" height="20" />
         </div>
         <div class="clipboard" @onclick="CopyToClipboardAsync">
