--- a/WireGuardCommand/Pages/Project/ProjectView.razor
+++ b/WireGuardCommand/Pages/Project/ProjectView.razor
@@ -17,7 +17,7 @@
     {
         <Alert />
 
-        <Dialog Type="DialogType.YesNo" Title="@DialogTitle" Content="@DialogContent" ClickYes="@DialogYes" @ref="Dialog"/>
+        <Dialog @ref="Dialog"/>
 
         <Toolbar>
             <div style="display: flex; flex-direction: column; padding: 0.5rem">
