--- a/WireGuardCommand/Components/Alert.razor
+++ b/WireGuardCommand/Components/Alert.razor
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="alert @(this.Type.ToString().ToLower())">
             <span class="alert-content">@(this.Content)</span>
-            <span class="alert-close" @onclick="Dismiss">x</span>
+            <span class="alert-close" @onclick="Dismiss">✖</span>
         </div>
     </div>
 }
