--- a/WireGuardCommand/Pages/Project/ProjectView.razor
+++ b/WireGuardCommand/Pages/Project/ProjectView.razor
@@ -237,12 +237,22 @@
                         </div>
                     }
                     <div style="display: @(LoadingPreview ? "none" : "flex"); flex-direction: column; gap: 1rem">
+                        @if(!string.IsNullOrWhiteSpace(PreviewCode))
+                        {
+                            <div style="display: flex; gap: 0.5rem">
+                                <div style="flex: 1; display: flex; flex-direction: column;">
+                                    <div style="font-size: 1.25rem; font-weight: bold">Commands</div>
+                                    <CodeHighlighter Code="@PreviewCode" Language="language-ini" FileName="@project.ProjectData.CommandFileName" />
+                                </div>
+                            </div>
+                        }
+
                         @foreach (var config in PreviewConfigs)
                         {
                             <div style="display: flex; gap: 0.5rem">
                                 <div style="flex: 1; display: flex; flex-direction: column;">
                                     <div style="font-size: 1.25rem; font-weight: bold">@config.Key</div>
-                                    <CodeHighlighter Code="@config.Value" Language="language-ini" />
+                                    <CodeHighlighter Code="@config.Value" Language="language-ini" FileName="wg.conf" />
                                 </div>
                             </div>
                         }
