Added divider component for toolbar.

--- a/WireGuardCommand/Pages/Project/ProjectView.razor
+++ b/WireGuardCommand/Pages/Project/ProjectView.razor
@@ -29,6 +29,8 @@
                 }
             </div>
 
+            <ToolbarDivider></ToolbarDivider>
+
             <ToolbarMenu Title="File">
                 @if (RuntimeInformation.IsOSPlatform(OSPlatform.Windows))
                 {
