--- a/WireGuardCommand/Components/ToolbarMenu.razor.css
+++ b/WireGuardCommand/Components/ToolbarMenu.razor.css
@@ -8,11 +8,14 @@
     cursor: pointer;
     user-select: none;
 
+    border: 1px solid transparent;
+
     padding: 0.5rem;
 
     transition: background-color 0.25s;
 }
 .toolbar-menu:hover {
+    border: 1px solid #505050;
     background-color: #303030;
 }
 
@@ -25,7 +28,7 @@
     gap: 1px;
 
     top: 100%;
-    left: 0;
+    left: 0px;
 
     min-width: 20ch;
 
