Added settings page for later implementation.

--- a/WireGuardCommand/Pages/Index.razor
+++ b/WireGuardCommand/Pages/Index.razor
@@ -25,6 +25,8 @@
                 <div style="flex: 1;"></div>
 
                 <button class="btn-primary" @onclick="LoadProjectsAsync">Refresh</button>
+                
+                <div class="btn-settings" @onclick="OpenSettings"></div>
             </div>
         </div>
 
