--- a/WireGuardCommand/Components/Alert.razor
+++ b/WireGuardCommand/Components/Alert.razor
@@ -6,8 +6,15 @@
 {
     <div class="container @(this.Position.ToString().ToLower())">
         <div class="alert @(this.Type.ToString().ToLower()) @(this.Position.ToString().ToLower())" style="@(animationStyle)">
-            <span class="alert-content">@(this.Content)</span>
-            <span class="alert-close" @onclick="Dismiss">✖</span>
+            <div style="display: flex; padding: 1rem;">
+                <span class="alert-content">@(this.Content)</span>
+                <span class="alert-close" @onclick="Dismiss">✖</span>
+            </div>
+
+            @if(lifetime > 0)
+            {
+                <div class="alert-lifetime" style="@(lifetimeAnimationStyle); background-color: @(Type == AlertType.Info ? "skyblue" : "firebrick")"></div>
+            }
         </div>
     </div>
 }
