Changed timing to linear for alert lifetime animation and increased alert lifetimes to 4 seconds for info alerts.

--- a/WireGuardCommand/Components/Alert.razor.css
+++ b/WireGuardCommand/Components/Alert.razor.css
@@ -15,7 +15,8 @@
 .alert-lifetime {
     height: 2px;
     width: 0;
-    background-color: greenyellow;
+
+    animation-timing-function: linear;
 }
 
 .alert {
