--- a/WireGuardCommand/Pages/Project/ProjectSettings.razor.css
+++ b/WireGuardCommand/Pages/Project/ProjectSettings.razor.css
@@ -3,4 +3,20 @@
 
     display: flex;
     flex-direction: column;
+
+    gap: 0.5rem;
+
+    padding: 1rem;
+}
+
+.config {
+    display: flex; 
+    flex-direction: column; 
+
+    gap: 1rem;
+
+    background-color: #202020;
+    border: 1px solid #505050;
+
+    padding: 0.5rem;
 }
