--- a/WireGuardCommand/Pages/Project/ProjectSettings.razor.css
+++ b/WireGuardCommand/Pages/Project/ProjectSettings.razor.css
@@ -3,6 +3,13 @@
 
     display: flex;
     flex-direction: column;
+}
+
+.body {
+    flex: 1;
+    
+    display: flex;
+    flex-direction: column;
 
     gap: 0.5rem;
 
