Changed alert lifetime colors and fixed alert component not being removed from DOM.

--- a/WireGuardCommand/Components/Alert.razor
+++ b/WireGuardCommand/Components/Alert.razor
@@ -13,7 +13,7 @@
 
             @if(lifetime > 0)
             {
-                <div class="alert-lifetime" style="@(lifetimeAnimationStyle); background-color: @(Type == AlertType.Info ? "skyblue" : "firebrick")"></div>
+                <div class="alert-lifetime" style="@(lifetimeAnimationStyle); background-color: @(Type == AlertType.Info ? "#26A4FF" : "#FF3838")"></div>
             }
         </div>
     </div>
