Added titles to the codehighlighter and included title in qr code dialog.

--- a/WireGuardCommand/Components/CodeHighlighter.razor
+++ b/WireGuardCommand/Components/CodeHighlighter.razor
@@ -1,6 +1,7 @@
 ﻿<div class="code">
     <Dialog @ref="QRCodeDialog"/>
 
+    <div style="font-size: 1.25rem; font-weight: bold">@Title</div>
     <pre>
         <code class="@Language">
             @Code
