--- a/WireGuardCommand/Pages/Project/ProjectView.razor
+++ b/WireGuardCommand/Pages/Project/ProjectView.razor
@@ -245,7 +245,7 @@
                         {
                             <div style="display: flex; gap: 0.5rem">
                                 <div style="flex: 1; display: flex; flex-direction: column;">
-                                    <CodeHighlighter Title="@config.Key" Code="@config.Value" Language="language-ini" FileName="wg.conf" />
+                                    <CodeHighlighter Title="@config.Title" Code="@config.Code" Language="language-ini" FileName="@(config.PeerId is null ? "server.conf" : $"peer-{config.PeerId}.conf")" />
                                 </div>
                             </div>
                         }
